# sfml-reorganise

./: CMakePresets.json
sfml/: CMakeLists.txt  sfml.cpp
sfml/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
